--- a/src/index.html
+++ b/src/index.html
@@ -41,52 +41,52 @@ title: Használt Autó Fotózás Budapest
 				<div id="slider" class="slider" role="region" aria-roledescription="carousel" aria-label="Használt Autó Fotózás slider">
 					<div class="slide" role="group" aria-roledescription="slide" aria-label="1 / 4">
 						<figure class="slide__image slide__image--before">
-							<img src="/assets/images/before-giulia.webp" alt="Telefonos kép" width="700" height="467" loading="eager" fetchpriority="high" decoding="async">
+							<img src="/assets/images/before/before-giulia.webp" alt="Telefonos kép" width="700" height="467" loading="eager" fetchpriority="high" decoding="async">
 							<figcaption>Telefonos kép</figcaption>
 							<i class="slide__icon fas fa-times-circle text-red"></i>
 						</figure>
 						<i class="slide__arrow fas fa-arrow-down"></i>
 						<figure class="slide__image slide__image--after">
-							<img src="/assets/images/after-giulia.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="eager" fetchpriority="high" decoding="async">
+							<img src="/assets/images/after/after-giulia.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="eager" fetchpriority="high" decoding="async">
 							<figcaption class="slide__caption slide__caption--after">Eladásra optimalizált, profi fotó</figcaption>
 							<i class="slide__icon fas fa-check-circle text-green"></i>
 						</figure>
 					</div>
 					<div class="slide" role="group" aria-roledescription="slide" aria-label="2 / 4">
 						<figure class="slide__image slide__image--before">
-							<img src="/assets/images/before-a45s.webp" alt="Telefonos kép" width="700" height="467" loading="lazy" decoding="async">
+							<img src="/assets/images/before/before-a45s.webp" alt="Telefonos kép" width="700" height="467" loading="lazy" decoding="async">
 							<figcaption>Telefonos kép</figcaption>
 							<i class="slide__icon fas fa-times-circle text-red"></i>
 						</figure>
 						<i class="slide__arrow fas fa-arrow-down"></i>
 						<figure class="slide__image slide__image--after">
-							<img src="/assets/images/after-a45s.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="lazy" decoding="async">
+							<img src="/assets/images/after/after-a45s.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="lazy" decoding="async">
 							<figcaption class="slide__caption slide__caption--after">Eladásra optimalizált, profi fotó</figcaption>
 							<i class="slide__icon fas fa-check-circle text-green"></i>
 						</figure>
 					</div>
 					<div class="slide" role="group" aria-roledescription="slide" aria-label="3 / 4">
 						<figure class="slide__image slide__image--before">
-							<img src="/assets/images/before-a6.webp" alt="Telefonos kép" width="700" height="467" loading="lazy" decoding="async">
+							<img src="/assets/images/before/before-a6.webp" alt="Telefonos kép" width="700" height="467" loading="lazy" decoding="async">
 							<figcaption>Telefonos kép</figcaption>
 							<i class="slide__icon fas fa-times-circle text-red"></i>
 						</figure>
 						<i class="slide__arrow fas fa-arrow-down"></i>
 						<figure class="slide__image slide__image--after">
-							<img src="/assets/images/after-a6.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="lazy" decoding="async">
+							<img src="/assets/images/after/after-a6.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="lazy" decoding="async">
 							<figcaption class="slide__caption slide__caption--after">Eladásra optimalizált, profi fotó</figcaption>
 							<i class="slide__icon fas fa-check-circle text-green"></i>
 						</figure>
 					</div>
 					<div class="slide" role="group" aria-roledescription="slide" aria-label="4 / 4">
 						<figure class="slide__image slide__image--before">
-							<img src="/assets/images/before-ceed.webp" alt="Telefonos kép" width="700" height="467" loading="lazy" decoding="async">
+							<img src="/assets/images/before/before-ceed.webp" alt="Telefonos kép" width="700" height="467" loading="lazy" decoding="async">
 							<figcaption>Telefonos kép</figcaption>
 							<i class="slide__icon fas fa-times-circle text-red"></i>
 						</figure>
 						<i class="slide__arrow fas fa-arrow-down"></i>
 						<figure class="slide__image slide__image--after">
-							<img src="/assets/images/after-ceed.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="lazy" decoding="async">
+							<img src="/assets/images/after/after-ceed.webp" alt="Eladásra optimalizált, profi fotó" width="700" height="467" loading="lazy" decoding="async">
 							<figcaption class="slide__caption slide__caption--after">Eladásra optimalizált, profi fotó</figcaption>
 							<i class="slide__icon fas fa-check-circle text-green"></i>
 						</figure>
@@ -218,26 +218,21 @@ title: Használt Autó Fotózás Budapest
 		<div class="container">
 			<h2 class="section__title">Minden <del>autóból</del> <ins>járműből</ins> kihozom a maximumot</h2>
 			<p>Teljesen mindegy, hogy városi kisautód, SUV-d, családi kombid vagy épp az álomautód szeretnél eladni, profi fotókkal mindig könnyebb. A használt autó fotózással az a célom, hogy a hirdetésed kitűnjön, és a vevőd már a képeken beleszeressen a kocsidba. Íme néhány példa a munkáimból.</p>
-			<div class="gallery">
-				<img class="js-lightbox" src="/assets/images/gallery-giulia.webp" data-highres="/assets/images/gallery-giulia.webp" alt="Alfa Romeo Giulia Q4 Veloce" title="Alfa Romeo Giulia Q4 Veloce" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-focus-st.webp" data-highres="/assets/images/gallery-focus-st.webp" alt="Ford Focus ST Kombi" title="Ford Focus ST Kombi" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-a6.webp" data-highres="/assets/images/gallery-a6.webp" alt="Audi A6 Avant" title="Audi A6 Avant" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-ceed.webp" data-highres="/assets/images/gallery-ceed.webp" alt="Kia Ceed SW" title="Kia Ceed SW" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-mondeo-st200.webp" data-highres="/assets/images/gallery-mondeo-st200.webp" alt="Ford Mondeo ST200" title="Ford Mondeo ST200" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-944.webp" data-highres="/assets/images/gallery-944.webp" alt="Porsche 944 S2 Coupé" title="Porsche 944 S2 Coupé" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-corsa.webp" data-highres="/assets/images/gallery-corsa.webp" alt="Opel Corsa-e" title="Opel Corsa-e" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-range-rover.webp" data-highres="/assets/images/gallery-range-rover.webp" alt="Range Rover Sport" title="Range Rover Sport" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-swift.webp" data-highres="/assets/images/gallery-swift.webp" alt="Suzuki Swift" title="Suzuki Swift" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-a45s.webp" data-highres="/assets/images/gallery-a45s.webp" alt="Mercedes-AMG A45 S" title="Mercedes-AMG A45 S" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-megane.webp" data-highres="/assets/images/gallery-megane.webp" alt="Renault Mégane RS" title="Renault Mégane RS" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-corvette.webp" data-highres="/assets/images/gallery-corvette.webp" alt="Chevrolet Corvette C3 Stingray" title="Chevrolet Corvette C3 Stingray" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-m850i.webp" data-highres="/assets/images/gallery-m850i.webp" alt="BMW M850i Gran Coupé" title="BMW M850i Gran Coupé" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-911.webp" data-highres="/assets/images/gallery-911.webp" alt="Porsche 911 Carrera 4S" title="Porsche 911 Carrera 4S" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-octavia.webp" data-highres="/assets/images/gallery-octavia.webp" alt="Skoda Octavia" title="Skoda Octavia" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-318i.webp" data-highres="/assets/images/gallery-318i.webp" alt="BMW 318i" title="BMW 318i" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-ducato-lakoauto.webp" data-highres="/assets/images/gallery-ducato-lakoauto.webp" alt="Fiat Ducato Lakóautó" title="Fiat Ducato Lakóautó" width="1000" height="667" loading="lazy" fetchpriority="low">
-				<img class="js-lightbox" src="/assets/images/gallery-5-series.webp" data-highres="/assets/images/gallery-5-series.webp" alt="BMW 5 Series" title="BMW 5 Series" width="1000" height="667" loading="lazy" fetchpriority="low">
-			</div>
+			<section class="gallery">
+				{% for image in gallery %}
+					<img
+						class="js-lightbox"
+						src="/assets/images/gallery/{{ image.file }}"
+						data-highres="/assets/images/gallery/{{ image.file }}"
+						alt="{{ image.alt }}"
+						title="{{ image.title }}"
+						width="1000"
+						height="667"
+						loading="lazy"
+						fetchpriority="low"
+					>
+				{% endfor %}
+			</section>
 			<div class="button-and-link">
 				<a class="btn" href="#kapcsolat">Időpontot foglalok</a>
 				<a href="#gyik">Lenne még pár kérdésem</a>
