--- a/src/index.html
+++ b/src/index.html
@@ -128,7 +128,7 @@ title: Használt Autó Fotózás Budapest
 				</div>
 			</div>
 			<div class="callout">
-				<p class="callout__text">Ha eddig eljutottál, biztosan érdekel, mennyibe kerül. Jó hírem van: kevesebb, mint gondolnád.</p>
+				<p class="callout__text">Ha eddig eljutottál, biztosan érdekel, mennyibe kerül. Nos, jó hírem van: olcsóbb, mint gondolnád!</p>
 				<a class="callout__button btn" href="#arak">Mennyibe kerül?</a>
 			</div>
 		</div>
