--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@ title: Használt Autó Fotózás Budapest
 <script src="/assets/js/slider.js" defer></script>
 <script src="/assets/js/typing.js" defer></script>
 <script src="/assets/js/lightbox.js" defer></script>
+<script src="/assets/js/scroll-lock.js" defer></script>
 
 <main>
 	<header class="section hero">
