--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@ layout: base.html
 title: Használt Autó Fotózás Budapest
 ---
 
+<script src="/assets/js/main.js" defer></script>
 <script src="/assets/js/modal.js" defer></script>
 <script src="/assets/js/slider.js" defer></script>
 <script src="/assets/js/typing.js" defer></script>
@@ -164,7 +165,7 @@ title: Használt Autó Fotózás Budapest
 					<p class="plan__price plan__price--new h1"><ins>29.990 Ft</ins></p>
 					<p class="plan__disclaimer"><strong class="text-light">Neked csak annyit kell tenned, hogy tisztán hozod az autót.</strong> A többit én intézem, egy óra alatt végzünk is bőven.</p>
 				</div>
-				<img class="plan__photo" src="/assets/images/plan-photo.webp" alt="Használt Autó Fotózás" width="" height="" loading="lazy" fetchpriority="low">
+				<img class="plan__photo" src="/assets/images/plan-photo.webp" alt="Használt Autó Fotózás" width="1000" height="667" loading="lazy" fetchpriority="low">
 			</article>
 			<p class="for-dealers"><strong>Autókereskedőknek is!</strong><br> Profi fotókkal gyorsabban forog a készlet, erősebb a bizalom, és több autó fotózására mennyiségi kedvezményt adok.</p>
 			<div class="button-and-link">
@@ -299,7 +300,7 @@ title: Használt Autó Fotózás Budapest
 <footer class="footer">
 	<div class="container">
 		<p class="copyright">&copy; 2025 Szabó Roland | Használt Autó Fotózás</p>
-		<a class="footer__link" onclick="openModal()">Adatkezelés</a>
+		<a class="footer__link js-prevent-default" href="#adatkezeles" role="button" onclick="openModal()" aria-haspopup="dialog" aria-controls="privacy-modal">Adatkezelés</a>
 	</div>
 </footer>
 
