--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,9 @@ layout: base.html
 title: Használt Autó Fotózás Budapest
 ---
 
+<link rel="preload" href="/assets/images/before/before-giulia.webp" as="image" type="image/webp">
+<link rel="preload" href="/assets/images/after/after-giulia.webp" as="image" type="image/webp">
+
 <main>
 	<header class="section hero">
 		<div class="hero__grid container">
