--- a/src/koszonom.html
+++ b/src/koszonom.html
@@ -3,6 +3,8 @@ layout: base.html
 title: Köszönöm!
 ---
 
+<meta name="robots" content="noindex, nofollow">
+
 <main>
 	<header class="section hero">
 		<div class="hero__grid container">
